# road-to-darch

./: .gitignore  README.md
.github/workflows/: infrastructure_deploy.yaml  infrastructure_plan.yaml
clockify/: Makefile  data.json  pyproject.toml
clockify/config/: env_variables.py
clockify/src/: lambda_handler.py
clockify/src/aws/: ssm.py
clockify/src/configuration/: clockify_configuration.py  configuration.py
clockify/src/database/: postgres_connector.py
clockify/src/models/: clockify_api_interactor.py  time_entry.py
clockify/src/tests/configuration/: test_configuration.py
clockify/src/tests/models/: test_clockify_api_interactor.py  test_time_entry.py
clockify/src/utils/: misc.py
clockify/terraform/: .terraform.lock.hcl  backend.tf  buckets.tf  databases.tf  lambdas.tf  roles.tf  subnets.tf  terraform.tfvars  variables.tf  vpc.tf
