[tool.poetry]
name = "clockify"
version = "0.1.0"
description = "A Data Engineering project to practice data pipeline concepts."
authors = ["Victor Buendia <victorbuendia03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
boto3 = "^1.26.129"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
